pages/assets/css/basic.css
/* ... */
.navbar-dark .nav-link:last-child {
    border-bottom: 1px solid;
}
.navbar-dark .nav-link:hover, .navbar-dark .nav-link:focus {
    background: var(--nav-link-primary-color);
    color: var(--nav-link-secondary-color);
}
.navbar-dark .nav-link:active {
    background: lightgrey;
}

.share-button {
    width: 40px;
}
.share-button img {
    width: 100%;
}
.navbar-dark .share-button {
    filter: invert(90%) sepia(100%) saturate(0%) hue-rotate(9deg) brightness(103%) contrast(102%);
}

.icon-button {
    cursor: pointer;
}
.nav-buttons {
    height: 30px;
    padding-top: 1.5em;
    padding-bottom: 1.5em;
    padding-left: 2em;
}

.modal-footer {
    border-top: none;
}

.share-modal__items .list-group-item:first-child {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}
.share-modal__items .list-group-item:last-child {
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}
.share-modal__items .list-group-item {
    cursor: pointer;
}
.share__icon {
    width: 20px;
    margin-right: 10px;
}
.copy-notice {
    display: none;
}
.list-group-item-success.list-group-item-action:hover {
    background-color: #b1dfbb;
}
.link-action.list-group-item-success .copy-notice {
    display: inline;
}

.activity__list {
    --pg-activity-badge-size: 20px;
    margin: 0 calc( var(--pg-activity-badge-size) / 2);
    position: relative;
}
.activity-log__item {
    display: flex;
    padding: 0.5rem 0;
}
.activity-log__item::before {
    content: "";
    top: 20px;
    bottom: 0;
    left: 0;
    width: 3px;
    background: #DDD;
    position: absolute;
}
.activity-log__badge {
    margin-right: 20px;
    margin-left: calc( var(--pg-activity-badge-size) / -2 + 1px );
    z-index: 1;
    height: calc( var(--pg-activity-badge-size) * 2 );
    background-color: white;
    display: flex;
    align-items: center;
}
.activity-log__badge > .badge__inner{
    height: calc( var(--pg-activity-badge-size) );
    width: calc( var(--pg-activity-badge-size) );
    border-radius: 50%;
}
.activity-log__body {
    margin-top: 8px;
}

.offcanvas__header {
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    padding: 0.5em 1em;
    background: white;
    z-index: 100;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}
.offcanvas__content {
    padding: 1em;
}

/* Home page styles */

.video-image-link {
    cursor: pointer;
}

#section-about .images {
    margin-bottom: 100px;
}
@media (max-width: 767px) {
    #section-about .images {
        margin-bottom: 0;
    }
}

/* Datatable styles */

.dtr-title {
    font-weight: bold;
}

/* User Profile styles */

#user-profile-details {
    width: min( 600px, 100% );
}

#mapbox-autocomplete-list div[data-value="address"] {
    display: none;
}

#createChallengeLabel.private:before {
    content: '\f200';
    font-family: 'Ionicons';
    padding-right: 16px;
}
#createChallengeLabel.public:before {
    content: '\f4c9';
    font-family: 'Ionicons';
    padding-right: 16px;
}

.user__avatar {
    position: relative;
}

.user__badge {
    --pg-badge-primary-color: #ffbd0b;
    --pg-badge-primary-shadow: #cb7407;
    --pg-badge-secondary-color: #f0a608;
    --pg-badge-light-border: #ffd84c;
    --pg-badge-dark-border: #d57e08;
    --pg-badge-darker-border: #c47207;
    --pg-badge-icon-color: var(--pg-badge-primary-color);
    --pg-badge-rotation: 44deg;
    --pg-badge-size: 150px;
    --pg-badge-inner-size: 70px;
    --pg-badge-outer-border-size: 7px;
    --pg-badge-inner-border-size: 5px;
    --pg-badge-icon-size: 50px;
    --pg-badge-sheen-width: 40px;

    margin: auto;
    position: relative;
    height: var(--pg-badge-size);
    width: var(--pg-badge-size);
}

.user__badge[disabled] {
    opacity: 0.3;
}

.user__badge .front, .user__badge .back {
  position: absolute;
  height: var(--pg-badge-size);
  width: var(--pg-badge-size);
  background: var(--pg-badge-primary-color);
  border-radius: 50%;
  border-top: var(--pg-badge-outer-border-size) solid var(--pg-badge-light-border);
  border-left: var(--pg-badge-outer-border-size) solid var(--pg-badge-light-border);
  border-right: var(--pg-badge-outer-border-size) solid var(--pg-badge-dark-border);
  border-bottom: var(--pg-badge-outer-border-size) solid var(--pg-badge-dark-border);
  transform: rotate(var(--pg-badge-rotation));
}
.user__badge .front:before, .user__badge .back:before {
  content: "";
  margin: auto;
  position: absolute;
  width: var(--pg-badge-inner-size);
  height: var(--pg-badge-inner-size);
  background: var(--pg-badge-secondary-color);
  border-radius: 50%;
  border-bottom: var(--pg-badge-inner-border-size) solid var(--pg-badge-light-border);
  border-right: var(--pg-badge-inner-border-size) solid var(--pg-badge-light-border);
  border-left: var(--pg-badge-inner-border-size) solid var(--pg-badge-dark-border);
  border-top: var(--pg-badge-inner-border-size) solid var(--pg-badge-dark-border);
  z-index: 2;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
.user__badge .front .badge__icon, .user__badge .front .badge__icon {
  overflow: hidden;
  position: absolute;
  color: var(--pg-badge-icon-color);
  font-size: var(--pg-badge-icon-size);
  transform: rotate(calc( -1 * var(--pg-badge-rotation) ));
  text-align: center;
  text-shadow: 2px 2px 0 var(--pg-badge-primary-shadow);
  z-index: 3;
  border-radius: 50%;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.user__badge .front .badge__icon:after, .user__badge .back .badge__icon:after {
  content: "";
  position: absolute;
  height: 200px;
  width: var(--pg-badge-sheen-width);
  margin: 20px -65px;
  box-shadow: 50px -23px 0 -10px rgba(255, 255, 255, 0.22), 85px -10px 0 -16px rgba(255, 255, 255, 0.19);
  transform: rotate(-50deg);
  animation: shine 0s forwards ease;
  top: 0;
}
@keyframes shine {
  0% {
    margin: 20px -65px;
  }
  50% {
    margin: 70px -85px;
  }
  100% {
    margin: 20px -65px;
  }
}
/* ... */

